[gd_scene load_steps=23 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://YoungSerif-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Remove.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 1, 0.964706, 0.584314, 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0.788235, 1, 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.105882, 0.207843, 0.552941, 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.0392157, 0.843137, 1, 1 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.0431373, 0.494118, 0.713726, 1 )

[sub_resource type="Theme" id=17]
VScrollBar/styles/grabber = SubResource( 18 )
VScrollBar/styles/grabber_highlight = SubResource( 19 )
VScrollBar/styles/grabber_pressed = SubResource( 20 )
VScrollBar/styles/scroll = null
VScrollBar/styles/scroll_focus = null

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.270588, 0.760784, 1, 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="Data" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="Clear" type="Button" parent="Data"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -85.0
margin_top = -546.0
margin_right = -51.0
margin_bottom = -511.0
custom_colors/font_color = Color( 1, 0.941176, 0.478431, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "X"
icon_align = 1

[node name="Clear Score" type="Button" parent="Data"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -669.0
margin_top = -332.0
margin_right = -609.0
margin_bottom = -297.0
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/normal = SubResource( 21 )
text = "Clear"
icon_align = 1

[node name="Clear Weight" type="Button" parent="Data"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -633.0
margin_top = -68.0
margin_right = -573.0
margin_bottom = -33.0
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/normal = SubResource( 21 )
text = "Clear"
icon_align = 1

[node name="Weights" type="Control" parent="Data"]
margin_left = 348.0
margin_top = 332.0
margin_right = 539.0
margin_bottom = 541.0

[node name="Weight" type="Label" parent="Data/Weights"]
margin_left = 125.0
margin_right = 184.0
margin_bottom = 23.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Weight"
align = 1
valign = 1

[node name="Lab" type="Label" parent="Data/Weights"]
margin_left = 5.0
margin_top = 30.0
margin_right = 104.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 30 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Lab"
valign = 1

[node name="LabW" type="LineEdit" parent="Data/Weights"]
margin_left = 125.0
margin_top = 30.0
margin_right = 185.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 30 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/normal = SubResource( 14 )
text = "10"
align = 1

[node name="Quiz" type="Label" parent="Data/Weights"]
margin_left = 5.0
margin_top = 70.0
margin_right = 104.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 30 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Quiz"
valign = 1

[node name="QuizW" type="LineEdit" parent="Data/Weights"]
margin_left = 125.0
margin_top = 70.0
margin_right = 185.0
margin_bottom = 100.0
rect_min_size = Vector2( 60, 30 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/normal = SubResource( 14 )
text = "10"
align = 1

[node name="Assignment" type="Label" parent="Data/Weights"]
margin_left = 5.0
margin_top = 110.0
margin_right = 104.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 30 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Assignment"
valign = 1

[node name="AssignmentW" type="LineEdit" parent="Data/Weights"]
margin_left = 125.0
margin_top = 110.0
margin_right = 185.0
margin_bottom = 140.0
rect_min_size = Vector2( 60, 30 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/normal = SubResource( 14 )
text = "5"
align = 1

[node name="Test" type="Label" parent="Data/Weights"]
margin_left = 5.0
margin_top = 150.0
margin_right = 104.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 30 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Test"
valign = 1

[node name="TestW" type="LineEdit" parent="Data/Weights"]
margin_left = 125.0
margin_top = 150.0
margin_right = 185.0
margin_bottom = 180.0
rect_min_size = Vector2( 60, 30 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/normal = SubResource( 14 )
text = "20"
align = 1

[node name="Reset" type="Button" parent="Data/Weights"]
margin_left = 137.0
margin_top = 200.0
margin_right = 171.0
margin_bottom = 235.0
custom_colors/font_color = Color( 1, 0.941176, 0.478431, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "X"
icon_align = 1

[node name="LNO" type="Label" parent="Data"]
margin_left = 22.0
margin_top = 62.0
margin_right = 62.0
margin_bottom = 85.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "0"
align = 1
valign = 1

[node name="QNO" type="Label" parent="Data"]
margin_left = 22.0
margin_top = 112.0
margin_right = 62.0
margin_bottom = 135.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "0"
align = 1
valign = 1

[node name="ANO" type="Label" parent="Data"]
margin_left = 22.0
margin_top = 162.0
margin_right = 62.0
margin_bottom = 185.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "0"
align = 1
valign = 1

[node name="TNO" type="Label" parent="Data"]
margin_left = 22.0
margin_top = 212.0
margin_right = 62.0
margin_bottom = 235.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "0"
align = 1
valign = 1

[node name="Cross" type="Button" parent="Data"]
margin_left = 448.0
margin_top = 266.0
margin_right = 482.0
margin_bottom = 301.0
custom_colors/font_color = Color( 1, 0.941176, 0.478431, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "X"
icon_align = 1

[node name="Lab" type="Control" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 45.0
margin_right = -508.0
margin_bottom = -498.0

[node name="Score" type="Label" parent="Data/Lab"]
margin_left = 7.0
margin_top = 17.0
margin_right = 84.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Lab score"

[node name="ScoreReceived" type="LineEdit" parent="Data/Lab"]
margin_left = 160.0
margin_top = 7.0
margin_right = 210.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 2 )
text = "0"
align = 1
max_length = 5
caret_blink = true

[node name="Outof" type="Label" parent="Data/Lab"]
margin_left = 230.0
margin_top = 16.0
margin_right = 307.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "out of"

[node name="ScoreTotal" type="LineEdit" parent="Data/Lab"]
margin_left = 299.0
margin_top = 7.0
margin_right = 349.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
text = "10"
align = 1
max_length = 5
caret_blink = true

[node name="Button" type="Button" parent="Data/Lab"]
margin_left = 367.0
margin_top = 11.0
margin_right = 434.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 0.0745098, 0.47451, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Add"
icon_align = 1

[node name="Quiz" type="Control" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 95.0
margin_right = -508.0
margin_bottom = -448.0

[node name="Score" type="Label" parent="Data/Quiz"]
margin_left = 7.0
margin_top = 17.0
margin_right = 84.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Quiz score"

[node name="ScoreReceived" type="LineEdit" parent="Data/Quiz"]
margin_left = 160.0
margin_top = 7.0
margin_right = 210.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 2 )
text = "0"
align = 1
max_length = 5
caret_blink = true

[node name="Outof" type="Label" parent="Data/Quiz"]
margin_left = 230.0
margin_top = 16.0
margin_right = 307.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "out of"

[node name="ScoreTotal" type="LineEdit" parent="Data/Quiz"]
margin_left = 299.0
margin_top = 7.0
margin_right = 349.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
text = "10"
align = 1
max_length = 5
caret_blink = true

[node name="Button" type="Button" parent="Data/Quiz"]
margin_left = 367.0
margin_top = 11.0
margin_right = 434.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 0.0745098, 0.47451, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Add"
icon_align = 1

[node name="Assignment" type="Control" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 145.0
margin_right = -508.0
margin_bottom = -398.0

[node name="Score" type="Label" parent="Data/Assignment"]
margin_left = 7.0
margin_top = 17.0
margin_right = 84.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Assignment score"

[node name="ScoreReceived" type="LineEdit" parent="Data/Assignment"]
margin_left = 160.0
margin_top = 7.0
margin_right = 210.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 2 )
text = "0"
align = 1
max_length = 5
caret_blink = true

[node name="Outof" type="Label" parent="Data/Assignment"]
margin_left = 230.0
margin_top = 16.0
margin_right = 307.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "out of"

[node name="ScoreTotal" type="LineEdit" parent="Data/Assignment"]
margin_left = 299.0
margin_top = 7.0
margin_right = 349.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
text = "36"
align = 1
max_length = 5
caret_blink = true

[node name="Button" type="Button" parent="Data/Assignment"]
margin_left = 367.0
margin_top = 11.0
margin_right = 434.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 0.0745098, 0.47451, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Add"
icon_align = 1

[node name="Test" type="Control" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 195.0
margin_right = -508.0
margin_bottom = -348.0

[node name="Score" type="Label" parent="Data/Test"]
margin_left = 7.0
margin_top = 17.0
margin_right = 84.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Test score"

[node name="ScoreReceived" type="LineEdit" parent="Data/Test"]
margin_left = 160.0
margin_top = 7.0
margin_right = 210.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 2 )
text = "0"
align = 1
max_length = 5
caret_blink = true

[node name="Outof" type="Label" parent="Data/Test"]
margin_left = 230.0
margin_top = 16.0
margin_right = 307.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "out of"

[node name="ScoreTotal" type="LineEdit" parent="Data/Test"]
margin_left = 299.0
margin_top = 7.0
margin_right = 349.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
text = "30"
align = 1
max_length = 5
caret_blink = true

[node name="Button" type="Button" parent="Data/Test"]
margin_left = 367.0
margin_top = 11.0
margin_right = 434.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 0.0745098, 0.47451, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Add"
icon_align = 1

[node name="Table" type="ScrollContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -442.0
margin_top = -547.0
margin_right = -93.0
margin_bottom = -43.0
theme = SubResource( 17 )

[node name="Lists" type="VBoxContainer" parent="Table"]
margin_right = 318.0
margin_bottom = 30.0

[node name="0" type="HBoxContainer" parent="Table/Lists"]
margin_right = 318.0
margin_bottom = 30.0

[node name="Type" type="Label" parent="Table/Lists/0"]
margin_right = 110.0
margin_bottom = 30.0
rect_min_size = Vector2( 110, 30 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Type"
align = 1
valign = 1

[node name="Score" type="LineEdit" parent="Table/Lists/0"]
margin_left = 114.0
margin_right = 164.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 30 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Score"
align = 1
max_length = 5

[node name="Outof" type="LineEdit" parent="Table/Lists/0"]
margin_left = 168.0
margin_right = 234.0
margin_bottom = 30.0
rect_min_size = Vector2( 66, 30 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Out of"
align = 1
max_length = 6

[node name="Remove" type="Button" parent="Table/Lists/0"]
margin_left = 238.0
margin_right = 318.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 30 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Remove?"
script = ExtResource( 3 )

[node name="Stats" type="Control" parent="."]
margin_left = 91.0
margin_top = 341.0
margin_right = 312.0
margin_bottom = 531.0

[node name="Percentage" type="Control" parent="Stats"]
margin_right = 105.0
margin_bottom = 103.0

[node name="Type" type="Label" parent="Stats/Percentage"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Percentage"

[node name="Numbers" type="Label" parent="Stats/Percentage"]
margin_left = -1.0
margin_top = 37.0
margin_right = 39.0
margin_bottom = 60.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "%"

[node name="GPA" type="Control" parent="Stats"]
margin_left = 120.0
margin_right = 225.0
margin_bottom = 96.0

[node name="Type" type="Label" parent="Stats/GPA"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "GPA"

[node name="Numbers" type="Label" parent="Stats/GPA"]
margin_left = -1.0
margin_top = 37.0
margin_right = 39.0
margin_bottom = 60.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "."

[node name="Calculate" type="Button" parent="Stats"]
margin_left = 7.0
margin_top = 119.0
margin_right = 206.0
margin_bottom = 160.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
text = "Calculate"
icon_align = 1

[connection signal="pressed" from="Data/Clear" to="." method="_on_Clear_pressed"]
[connection signal="pressed" from="Data/Clear Score" to="." method="_on_Clear_Score_pressed"]
[connection signal="pressed" from="Data/Clear Weight" to="." method="_on_Clear_Weight_pressed"]
[connection signal="pressed" from="Data/Weights/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="Data/Cross" to="." method="_on_Cross_pressed"]
[connection signal="pressed" from="Data/Lab/Button" to="." method="_on_LabButton_pressed"]
[connection signal="pressed" from="Data/Quiz/Button" to="." method="_on_QuizButton_pressed"]
[connection signal="pressed" from="Data/Assignment/Button" to="." method="_on_AssignmentButton_pressed"]
[connection signal="pressed" from="Data/Test/Button" to="." method="_on_TestButton_pressed"]
[connection signal="pressed" from="Table/Lists/0/Remove" to="Table/Lists/0/Remove" method="_on_Remove_pressed"]
[connection signal="pressed" from="Stats/Calculate" to="." method="_on_Calculate_pressed"]
